# avito-internship-pr-task

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.load.yml  docker-compose.yml  pyproject.toml
docker/: entrypoint.sh
load-tests/: README.md
load-tests/k6/: pr_reviewer_assignment.js
load-tests/results/: summary.json
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
observability/grafana/dashboards/: pr-reviewer-assignment-load.json
observability/grafana/provisioning/dashboards/: dashboards.yml
observability/prometheus/: prometheus.yml
observability/promtail/: config.yml
src/: config.py  main.py
src/api/: __init__.py
src/api/v1/: dependencies.py  errors.py  router.py  validation.py
src/api/v1/health/: routes.py  schemas.py
src/api/v1/pull_requests/: routes.py  schemas.py
src/api/v1/teams/: routes.py  schemas.py
src/api/v1/users/: routes.py  schemas.py
src/core/: exceptions.py
src/core/application/use_cases/: __init__.py  pull_requests.py  stats.py  teams.py  users.py
src/core/domain/: constraints.py  value_objects.py
src/core/domain/entities/: __init__.py  pull_requests.py  stats.py  teams.py  users.py
src/core/domain/enums/: pull_requests.py
src/core/interfaces/: logger.py  uow.py
src/core/interfaces/repositories/: __init__.py  base.py  pull_request_reviewers.py  pull_requests.py  teams.py  users.py
src/infrastructure/: in_memory.py  logging.py  metrics.py
src/infrastructure/postgres/: __init__.py  models.py  session.py  uow.py
src/services/: health.py  pull_requests.py  teams.py  users.py
tests/: conftest.py  factories.py
tests/e2e/: test_http_api.py
tests/integration/postgres/: conftest.py  test_postgres_repositories.py
tests/unit/: test_errors.py  test_pull_requests_use_cases.py  test_schema_mapping.py  test_teams_use_cases.py  test_users_use_cases.py  test_validation.py
(+6 files in other folders)
